@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_actions" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <object name="site_actions">
-  <object name="review-comments" meta_type="CMF Action" i18n:domain="plone.app.discussion">
+  <object name="review-comments" meta_type="CMF Action" i18n:domain="plone">
    <property name="title" i18n:translate="">Moderate comments</property>
    <property name="description" i18n:translate=""></property>
    <property name="url_expr">string:$portal_url/@@moderate-comments</property>
