@@ -2,7 +2,7 @@
 <object
     name="portal_controlpanel"
     xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    i18n:domain="plone.app.discussion"
+    i18n:domain="plone"
     purge="False">
 
     <configlet
